# j3AstroIO

./: .gitignore  CMakeLists.txt  README.md  _config.yml  index.md  j3AstroIO.cpp  j3AstroIO.hpp  j3AstroIOconvert.cpp  j3AstroIOexiv.cpp  j3AstroIOexiv.hpp  j3AstroIOfits.cpp  j3AstroIOfits.hpp  j3AstroIOraw.cpp  j3AstroIOraw.hpp  resource.h  testexiv.cpp
.github/workflows/: docs.yml  main.yml
_includes/: analytics.html
_layouts/: default.html
ci/: CMakeLists.txt
ci/embed/: CMakeLists.txt  embedresource.cpp  resource.h
cmake/: FindCFITSIO.cmake  FindExiv2.cmake  FindLibMagic.cmake  FindLibRaw.cmake  j3AstroIO-config.cmake.in
doc/: .buildinfo  CMakeLists.txt  Doxyfile  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/.doctrees/: environment.pickle  index.doctree
doc/_sources/: index.rst.txt
